--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>2nd repo</title>
 </head>
 <body>
-    
+    <p>i can push code to github</p>
+    <p>i know about css now</p>
 </body>
 </html>
